--- a/debian/rules
+++ b/debian/rules
@@ -21,7 +21,7 @@ CONFIGUREARGS := --libdir=/usr/lib --libexecdir=/usr/lib \
 		--enable-lookip \
 		--enable-error-notify \
 		--enable-unity \
-		--disable-blowfish --disable-des # BSD-Young license
+		--disable-blowfish # BSD-Young license
 	#--with-user=strongswan --with-group=nogroup
 	#	--enable-kernel-pfkey --enable-kernel-klips \
 	# And for --enable-eap-sim we would need the library, which we don't
